# ProjectT

./: .gitignore  r1.md
HDL/: Tools.md
HDL/00_iverilog/: 02_tutorial.md
HDL/01_verilator/: 00_intro.md  01_installation.md
HDL/02_SystemC/: 00_intro.md
HDL/02_SystemC/ba0/: 00_code_gen.md  00_hello.cpp  01_module.cpp  02_sc_ctor.cpp  03_sc_has_process.cpp  04_simu_process.cpp  05_simu_stage.cpp  06_time.cpp  07_concurrency.cpp  08_event.cpp  09_event_combined.cpp  10_delta_cycle.cpp  11_sensitivity.cpp  12_initialization.cpp  13_method.cpp  14_event_queue.cpp  15_event_queue_comb.cpp  16_chan_mutex.cpp  17_chan_semaphore.cpp  18_chan_FIFO.cpp  19_sig_read_write.cpp  20_sig_event.cpp  21_sig_many_writer.cpp  22_resolved_signal.cpp  23_signal_bool.cpp  24_buffer.cpp  25_comm__port.cpp  26_comm__export.cpp  27_comm__port2port.cpp  28_comm__special_port.cpp  29_comm__port_array.cpp  30_primitive_channel.cpp  31_hierarchical_channel.cpp  32_trace_VCD.cpp  33_report.cpp  34_customized_datatype.cpp  35_clock.cpp  36_cthread.cpp  clean.sh  run.sh  (+1 more)
HDL/02_SystemC/ba1/: 00_send_msg.cpp  01_send_msg_class.cpp  02_array_init.cpp  03_array_init_class.cpp  04_vcd_dump.cpp  05_event_timing.cpp  build.sh  clean.sh
HDL/03_ModelSim/: 00_installation.md  01_SystemC_Sim.md
HDL/04_Vivado/: 00_installation.md
cpp/: cpp.md
cpp/include/: all.hpp
cpp/leetcode/include/: Vec.hpp
cpp/misc/misc_00/: 00_class.cpp  01_template.cpp
cpp/projects/p00/: CMakeLists.txt  LogicGatesLearn.cpp  LogicGatesLearn.hpp  LogicGatesSim.cpp  LogicGatesSim.hpp  main.cpp  readme.md  run.sh
cpp/projects/p01/: p01.md
cpp/projects/p01/app/app_eigen/: CMakeLists.txt  main.cpp  run_gdb.sh
cpp/projects/p01/app/app_local/: CMakeLists.txt  main.cpp  mnist.cpp
cpp/projects/p01/app/app_opencv/: CMakeLists.txt  fitEllipse.cpp  main.cpp
cpp/projects/p01/app/app_test/: CMakeLists.txt  app_test.h  app_test_float.cpp  app_test_mulinomial.cpp  app_test_stat.cpp  main.cpp
cpp/projects/p01/app/app_test/stat_test/: var_sd.py
cpp/projects/p01/mod/mnist_for_c/: CMakeLists.txt  example.c  mnist_for_c.h  mnist_for_c.md
cpp/projects/p01/mod/nn_mnist/: CMakeLists.txt  modelX.h  nn_mnist.h
cpp/projects/p01/mod/ocv_util/: CMakeLists.txt  ocv_util.cpp  ocv_util.h
cpp/projects/p02_float_verify/: 0_gen_golden.py  1_f32_to_f16.py  build.sh  main.cpp  py754.py
cpp/standard/: readme.md
cpp/standard/11/: 00_move_semantics.cpp  01_rvalue_references.cpp  02_forwarding_references.cpp  03_variadic_templates.cpp  04_initializer_lists.cpp  05_static_assertions.cpp  06_auto.cpp  07_lambda_expression.cpp  08_decltype.cpp  09_type_aliases.cpp  10_nullptr.cpp  11_strong_typed_enums.cpp  12_attributes.cpp  13_constexpr.cpp  14_delegating_constructor.cpp  15_user_define_literals.cpp  16_final_specifier.cpp  17_default_functions.cpp  18_deleted_functions.cpp  19_range_based_for_loop.cpp  20_special_member_func_for_move.cpp  21_converting_constructors.cpp  22_explicit_conversion_functions.cpp  23_inline_namespaces.cpp  24_non_static_data_member_init.cpp  25_right_angle_brackets.cpp  26_ref_qualified_member_func.cpp  27_trailing_return_types.cpp  28_noexcept_specifier.cpp  29_char32_t_and_char16_t.cpp  30_raw_stirng_literals.cpp  70_std_move.cpp  71_std_forward.cpp  72_std_thread.cpp  73_std_to_string.cpp  74_type_traits.cpp  75_smart_pointers.cpp  76_std_chrono.cpp  77_tuples.cpp  78_std_tie.cpp  (+11 more)
cpp/standard/14/: 00_binary_literals.cpp  01_generic_lambda.cpp  02_lambda_capture_initializers.cpp  03_return_type_deduction.cpp  04_decltype_auto.cpp  05_relaxing_constexpr.cpp  06_variable_templates.cpp  07_deprecated_attribute copy.cpp  70_user_defined_literals.cpp  71_complile_time_integer_sequences.cpp  72_std_make_unique.cpp  run.sh
cpp/standard/17/: 00_template_arg_deduction.cpp  01_non_type_template_para_w_auto.cpp  02_folding_expressions.cpp  03_new_rules_for_auto_braced_init_list.cpp  04_constexpr_lambda.cpp  05_lambda_capture_this_by_value.cpp  06_inline_variables.cpp  07_nested_namespaces.cpp  08_structured_bindings.cpp  09_selection_statements_with_initializer.cpp  10_constexpr_if.cpp  11_UTF-8_character_literals.cpp  12_attribute_fallthrough.cpp  13_attribute_nodiscard.cpp  14_attribute_maybe_unused.cpp  15_has_include.cpp  16_CTAD_class_template_argument_deduction.cpp  70_std_variant.cpp  71_std_optional.cpp  72_std_any.cpp  73_std_string_view.cpp  74_std_invoke.cpp  75_std_apply.cpp  76_std_filesystem.cpp  77_std_byte.cpp  78_splicing_for_maps_and_sets.cpp  79_parallel_algorithms.cpp  80_std_sample.cpp  81_std_clamp.cpp  82_std_reduce.cpp  83_prefix_sum_algorithm.cpp  84_GCD_and_LCM.cpp  85_std_not_fn.cpp  86_string_conversion_to_from_numbers.cpp  run.sh
cpp/standard/20/: 00_coroutines.cpp  run.sh
cpp/standard/ba0/: 00_typeid.cpp  01_typeid_class.cpp  02_typeid_class_name_dump.cpp  03_typeid_class_virtual.cpp
cpp/template/cmake/: CMakeLists.txt  clean.sh  main.c
cpp/template/pure_run/: 00.cpp  run.sh
cpp/topics/: Precedence.md
cpp/topics/00_lvalue_rvalue/: 00_from_c.cpp  01_func_n_ref.cpp  readme.md  (+10 more)
cpp/topics/12_malloc_porting/app/: CMakeLists.txt  elf32lriscv.lds  main.c  miv_smp.repl  prof3.resc  start.s
cpp/topics/12_malloc_porting/sys/: CMakeLists.txt  libmem.c  libmt.c  sys.c  sys_internal.c  sys_mem.c  sys_mem_freertos_heap_4.c  sys_mem_freertos_heap_5.c  sys_mgr.c  sys_pc_api.c
cpp/topics/12_malloc_porting/sys/inc/: My_MacroFuncs.h  My_Types.h  libmem.h  libmt.h  linked_list.h  macros.h  sys.h  sys_api.h  sys_internal.h  sys_pc_api.h  type.h
cuda/util/: 80_ProfMemcpy.cpp
pp/omp/: 00_intro.md
utils/: 00_to_local.sh  01_from_local.sh  utils.md
utils/cppfilt/: runMe.sh
utils/gdb/: gdb.md
utils/gdb/05_dump_n_cmake/: CMakeLists.txt  clean.sh  hello.cpp
utils/gprof/: clean.sh  main.cpp  run.sh
utils/nm/: clean.sh  demo2_shared_lib.cpp  demo4_hidden_default.cpp  runMe.sh
utils/objdump/: clean.sh  demo.cpp  runMe.sh
utils/readelf/: demo.cpp  runMe.sh
utils/size/: clean.sh  runMe.sh
utils/strip/: runMe.sh
verilog/00_iverilog/: 01.installation.md
verilog/01_verilator/: 00_intro.md
(+311 files in other folders)
